Abschnitt zu elektronischen Signaturen
git-svn-id: https://svn.lug-jena.de/uni-skripte@3200 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kubieziel-itsich/hash.ltx
+++ b/kubieziel-itsich/hash.ltx
@@ -10,7 +10,7 @@
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 \DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 
-\subtitle{Hashalgorithmen}
+\subtitle{Hashes und Signaturen}
 
 \begin{document}
 \begin{frame}
@@ -182,6 +182,134 @@
 
 \section{Elektronische Signaturen}
 
+\begin{frame}
+  \frametitle{Anforderungen an Signaturen}
+  Eine \emph{Signatur} ist eine digitale Unterschrift, die ein
+  digitales Dokument einem Subjekt zuordnet.
+  \pause{}
+  Anforderungen:
+  \begin{itemize}
+  \item<+-> Signatur muss überprüfbar sein.
+  \item<+-> Signatur darf nicht einfach an ein Dokument angehangen werden.
+  \item<+-> Jede Kopie einer Nachricht ist mit dem Original identisch.
+  \end{itemize}
+\end{frame}
 
+\begin{frame}
+  \frametitle{Signatursystem}
+  \begin{definition}
+    Ein \emph{Signatursystem} ist ein Tripel~$(\mathcal{P,U,K})$ aus
+    den endlichen Mengen der Nachrichten~$\mathcal{P}$, der
+    Unterschriften~$\mathcal{U}$ und den Schlüsseln~$\mathcal{K}$.
+    \pause{}
 
+    Für jedes $k\in\mathcal{K}$ existieren \emph{Signaturen}
+    $u_{k}\colon \mathcal{P}\rightarrow\mathcal{U}$ und
+    \emph{Verifikationsfunktionen} $v_{k}\colon\mathcal{P} \times
+    \mathcal{U}\rightarrow \{0,1\}$. Dabei gilt für $x\in\mathcal{P}$
+    und $u\in\mathcal{U}$:
+    \begin{gather*}
+      v_{k}(x,u)=
+      \begin{cases}
+        0 & u_{k}(x)=u\\
+        1 & \text{sonst}
+      \end{cases}
+    \end{gather*}
+  \end{definition}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Beispiel: RSA-Signatur}
+  Alice hat, wie beim RSA"=Algorithmus, einen öffentlichen
+  Schlüssel~$(n,e)$ und einen privaten Schlüssel~$(d,e)$. Sie will
+  eine Nachricht~$m\in\mathcal{P}$ unterzeichnen. Sie berechnet:
+  \begin{gather*}
+    u=u(x)\equiv m^{d}\mod{n}
+  \end{gather*}
+  und veröffentlicht
+  \begin{gather*}
+    v (m,u)=
+    \begin{cases}
+      0 & m=u^{e}\mod{n}\\
+      1 & \text{sonst}
+    \end{cases}
+  \end{gather*}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Elektronische Signaturen in der Praxis}
+  \framesubtitle{Signaturgesetz}
+  \begin{itemize}
+  \item<+-> Schaffung von Rahmenbedingungen für elektronische
+    Signaturen (§\,1 Abs.\,1 SigG)
+  \item<+-> Rechtssicherheit für E-Commerce und E-Goverment
+  \item<+-> erste Version vom 1.\,August~1997, am 16.\,Mai~2001 neu
+    gefasst (letzte Änderung 28.\,Dezember~2009)
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Signaturgesetz}
+  \framesubtitle{Arten einer elektronischen Signatur}
+  Das Gesetz definiert drei Arten einer elektronischen Signatur:
+  \begin{itemize}
+  \item<+-> einfache elektronische Signatur
+  \item<+-> fortgeschrittene elektronische Signatur
+  \item<+-> qualifizierte elektronische Signatur
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Signaturgesetz}
+  \framesubtitle{einfache elektronische Signatur}
+  \begin{definition}
+    Eine \emph{einfache elektronische Signatur} ist ein Datum, dass
+    anderen Daten beigefügt oder mit diesen verknüpft ist und dient
+    zur Authentifizierung.
+  \end{definition}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Signaturgesetz}
+  \framesubtitle{fortgeschrittene elektronische Signatur}
+  \begin{definition}
+    Eine \emph{fortgeschrittene elektronische Signatur} ist eine
+    einfache elektronische Signatur, die
+    \begin{enumerate}
+    \item die ausschließlich dem Inhaber eines Signaturschlüssels
+      zugeordnet ist
+    \item die Identifizierung des Inhabers eines Signaturschlüssels ermöglicht
+    \item mit Mitteln erzeugt wird, die der Inhabers eines
+      Signaturschlüssels unter seiner Kontrolle halten kann und
+    \item mit den Daten so verknüpft ist, dass eine nachträgliche
+      Änderung erkannt werden kann.
+    \end{enumerate}
+  \end{definition}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Signaturgesetz}
+  \framesubtitle{qualifizierte elektronische Signatur}
+  \begin{definition}
+    Eine \emph{qualifizierte elektronische Signatur} ist eine
+    fortgeschrittene elektronische Signatur, die
+    \begin{enumerate}
+    \item auf einem zum Zeitpunkt der Erzeugung gültigen Zertifikat
+      beruht und
+    \item mit einer sicheren Signaturerstellungseinheit erzeugt wurde.
+    \end{enumerate}
+  \end{definition}
+  \pause{}
+  Nur diese Form der Signatur dient als Ersatz für die eigenhändige
+  Unterschrift bzw. als Beweismittel vor Gericht.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Signaturgesetz}
+  \framesubtitle{Sichere Signaturerstellungseinheit}
+  \begin{itemize}
+  \item<+-> Hard- oder Software
+  \item<+-> soll Fälschungen sicher erkennen
+  \end{itemize}
+\end{frame}
 \end{document}
