--- a/kubieziel-itsich/hash.ltx
+++ b/kubieziel-itsich/hash.ltx
@@ -1,12 +1,24 @@
 \input{kopfteil.ltx}
 \usepackage{booktabs}
 \usepackage{colortbl}
+\usepackage{mathtools}   % Zur Definition von \abs und \norm
+
+% Um sicherzustellen, dass jeder Betrag/jede Norm links und rechts die
+% Striche bekommt, sind diese Befehle da. Damit kann man nicht die
+% rechten Striche vergessen und es wird etwas übersichtlicher. Aus
+% mathtools.pdf, z. B. \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
+\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
+\DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
+
 \subtitle{Hashalgorithmen}
 
 \begin{document}
 \begin{frame}
   \titlepage{}
 \end{frame}
+
+\section{Hashfunktionen}
+
 
 \begin{frame}
   \frametitle{Hashfunktion}
@@ -114,6 +126,61 @@
     \bottomrule
   \end{tabular}}
 \end{frame}
+
+\begin{frame}
+  \frametitle{Hashalgorithmen in der Praxis}
+  \begin{itemize}
+  \item<+-> MD5
+  \item<+-> SHA-1, SHA-224, SHA-256, SHA-384, SHA-512
+  \end{itemize}
+  \pause{}
+  Daneben existieren Hashalgorithmen auf der Basis von Blockchiffren.
+\end{frame}
+
+\subsection{MAC}
+
+
+\begin{frame}
+  \frametitle{Message Authentication Code}
+  \begin{definition}
+    Ein \emph{Message Authentication Code (MAC)} ist eine
+    Hashfunktion, die zusätzlich einen Schlüssel~$k$ verwendet.
+  \end{definition}
+  \pause{}
+  \begin{itemize}
+  \item<+-> kein Nachweis der Authentizität
+  \item<+-> CBC-MAC
+  \item<+-> MD5-MAC
+  \end{itemize}
+\end{frame}
+
+\subsection{HMAC}
+
+
+\begin{frame}
+  \frametitle{Hash-Based MAC}
+  Gegeben sei eine Hashfunktion~$h$ mit Blocklänge~$r$ und ein
+  Schlüssel~$k$.
+  \begin{enumerate}
+  \item<+-> Wenn $\abs{k}<r$, fülle Schlüssel bis zur Länge~$r$ mit
+    Nullen auf.
+  \item<+-> Wenn $\abs{k}>r$, berechne $h(k)$ und gehe ggf. wieder zu 1.
+  \end{enumerate}
+  \pause{}
+  Danach werden zwei Strings \texttt{ipad} und \texttt{opad}
+  erzeugt. Der Wert von \texttt{ipad} entsteht durch $r$-malige
+  Konkatenation des Bitstrings~00110110 und \texttt{opad} durch
+  $r$-malige Konkatenation von 01011100.
+  \pause{}
+
+  Schließlich wird der HMAC-Wert der Nachricht~$m$ durch
+  \begin{gather*}
+    \text{HMAC} (m,k)= h (k\oplus\text{opad}, h (k\oplus\text{ipad},m))
+  \end{gather*}
+  berechnet.
+\end{frame}
+
+\section{Elektronische Signaturen}
 
 
 
