Phasen der Planung
git-svn-id: https://svn.lug-jena.de/uni-skripte@3207 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kubieziel-itsich/secen.ltx
+++ b/kubieziel-itsich/secen.ltx
@@ -57,5 +57,73 @@
   \end{definition}
 \end{frame}
 
+\subsection{Konstruktionsphasen}
+
+\begin{frame}
+  \frametitle{Phasen der Konstruktion sicherer Systeme}
+  Die Konstruktion sicherer Systeme ist in Phasen geteilt und wird
+  iteriert durchgeführt. \pause{} Die Phasen umfassen:
+  \begin{itemize}
+  \item Planung
+  \item Ausführung
+  \item Prüfung
+  \item Anpassung
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Planungsphase}
+  \begin{itemize}
+  \item Festlegung der funktionalen Anforderungen
+  \item Festlegung der Einsatzumgebung
+  \item Analyse der Bedrohungen und Risiken
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Ausführungsphase}
+  \begin{itemize}
+  \item Formulierung der Sicherheitsanforderungen
+  \item Entwurf der Systemarchitektur
+  \item Umsetzung der Planungen
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Prüfungsphase}
+  \begin{itemize}
+  \item Validierung des Systems
+  \item Prüfung, ob Anforderungen erfüllt werden
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Anpassungsphase}
+  \begin{itemize}
+  \item Festlegung und Durchführung von Verbesserungen auf Grund der
+    obigen Ergebnisse
+  \item evtl. Überarbeitung der Anforderungen und zurück zur Planungsphase
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Konstruktionsphasen}
+  Diese Phasen sind nicht nach einem Durchlauf zu Ende. Stattdessen
+  muss die Einhaltung der Schutzziele überwacht und
+  gegebenenfalls die Anforderungen angepasst werden.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Security through/by Obscurity}
+  In Anlehnung an die \textsc{Kerckhoffs}schen Prinzipien sollte das
+  Design eines sicheren Systems offen liegen und \emph{nicht} von der
+  Geheimhaltung diverser Komponenten abhängen.\pause{}
+
+  \begin{exampleblock}
+    "`Verstecken"' von Rechnern durch Wegwerfen/Ignorieren spezieller
+    Nachrichten, Dienste auf ungewöhnliche Ports konfigurieren etc.
+  \end{exampleblock}
+\end{frame}
+
 
 \end{document}
