Fehler in der Klammerung behoben
git-svn-id: https://svn.lug-jena.de/uni-skripte@3208 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kubieziel-itsich/schluessel.ltx
+++ b/kubieziel-itsich/schluessel.ltx
@@ -186,7 +186,7 @@
   \begin{enumerate}
   \item<+-> Alice sendet an Trent das Tripel~$(I_{A}, I_{B}, N_{A})$.
   \item<+-> Trent generiert Sitzungsschlüssel~$k_{A,B}$ und sendet an
-    Alice $E[(N_{A}, I_{B}, k_{A,B}, E[(k_{A,B}, I_{A}), k_{B})], k_{A}]$.
+    Alice $E[(N_{A}, I_{B}, k_{A,B}, E[(k_{A,B}, I_{A}), k_{B}]), k_{A}]$.
   \item<+-> Alice sendet $E[(k_{A,B},I_{A}), k_{B}]$ an Bob.
   \item<+-> Bob sendet an Alice $E[N_{B}, k_{A,B}]$.
   \item<+-> Bob hat mit Alice eine Funktion~$f$ verabredet und Alice
