--- a/kubieziel-itsich/secen.ltx
+++ b/kubieziel-itsich/secen.ltx
@@ -208,5 +208,35 @@
   \end{enumerate}
 \end{frame}
 
+\section{Bedrohungsanalyse}
+
+\begin{frame}
+  \frametitle{Bedrohungsanalyse}
+  In der Bedrohungsanalyse geht es um die systematische Ermittlung von
+  Ursachen für Bedrohungen, die in Schäden resultieren können. Das
+  Ziel ist eine möglichst umfassende Erfassung.\pause{}
+
+  Es gibt zwei Ansätze:
+  \begin{enumerate}
+  \item<+-> Bedrohungsmatrix
+  \item<+-> Angriffs-/Bedrohungsbaum
+  \end{enumerate}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Bedrohungsmatrix}
+  \begin{itemize}
+  \item[Zeilen]<+-> Gefährdungsbereiche
+    \begin{enumerate}
+    \item externe Angriffe
+    \item interne Angriffe
+    \item Denial of Service (DoS)
+    \item Abstreiten von Aktionen
+    \item Missbrauch von Berechtigungen
+    \end{enumerate}
+  \item[Spalten]<+-> Auslöser der Bedrohung
+  \end{itemize}
+\end{frame}
+
 
 \end{document}
