--- a/kubieziel-itsich/secen.ltx
+++ b/kubieziel-itsich/secen.ltx
@@ -280,5 +280,12 @@
   Penetrationstests.
 \end{frame}
 
+\begin{frame}
+  \frametitle{Sicherheitsarchitektur}
+  Das Ergebnis der Betrachtungen kann in einer Sicherheitsstrategie
+  (Policy) festgehalten werden. Diese wird immer weiter verfeinert
+  (Modell, Architektur, konkrete Implementierung).
+\end{frame}
+
 
 \end{document}
