: durch \colon im Mathemodus ersetzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@3222 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/alt-nichtlinopt/nlo.tex
+++ b/alt-nichtlinopt/nlo.tex
@@ -108,11 +108,11 @@
 
 \section{Optimierungsaufgaben}
 \subsection{Aufgabenstellung und Beispiele}
-Gegen ist eine Funktion $f: \R \rightarrow \R$ ges: Minimum von $f$
+Gegeben ist eine Funktion $f\colon \R \rightarrow \R$ ges: Minimum von $f$
 \paragraph{Beispiel}
-$f:\R\rightarrow \R; f(x)=x^2$\\
-$f: \R\rightarrow \R; f(x)=x$ keine Lösung (mit $x\geq 0$ aber schon)
-\paragraph{Beispiel}(Bild von Folie zu finden im Netz) mit  $f:\R^2\rightarrow\R; f(x_1,x_2)=\frac 12 (x_1^2+x_2^2)-\cos(x_1^2)-\cos(x_2^2)$ Viele lokale Minima ein globales Minimum ($\cos + \frac 1 2 x$) für Verfahren schwer zu berechnen. Verfahren kann eine Funktion nur lokal betrachten.\\
+$f\colon\R\rightarrow \R; f(x)=x^2$\\
+$f\colon \R\rightarrow \R; f(x)=x$ keine Lösung (mit $x\geq 0$ aber schon)
+\paragraph{Beispiel}(Bild von Folie zu finden im Netz) mit  $f\colon\R^2\rightarrow\R; f(x_1,x_2)=\frac 12 (x_1^2+x_2^2)-\cos(x_1^2)-\cos(x_2^2)$ Viele lokale Minima ein globales Minimum ($\cos + \frac 1 2 x$) für Verfahren schwer zu berechnen. Verfahren kann eine Funktion nur lokal betrachten.\\
 $f(x)=\sin(x)$ hat viele globale Minima.
 \subsection*{Bezeichnungen}
 Vektoren sind Spaltenvektoren mit Komponenten $x_i$
@@ -122,9 +122,9 @@ euklidische Norm: $||x||=\sqrt{\sum(x_i^2}$
 $B(x,r)$ offene Kugel, $\overline B(x,r)$ abgeschlossene Kugel\\
 
 \paragraph*{Allgemeine Aufgabenstellung}
-$D\subset\R^n$ offene Menge (Definitionsbereich), $f:D\rightarrow\R$ Zielfunktion, $F\subset D$ Menge der zulässigen Punkte\\
+$D\subset\R^n$ offene Menge (Definitionsbereich), $f\colon D\rightarrow\R$ Zielfunktion, $F\subset D$ Menge der zulässigen Punkte\\
 (P) $\min\limits_{x\in F} f(x); D=\R=F$ unrestringiertes Problem; F: wird durch Restriktionen definiert, z.B.: $F=\{x\in\R^n | x\geq 0; Ax=b\}$\\
-\paragraph*{Bemerkung} $g: D\rightarrow\R^n, \max_x\in F g(x) \Leftrightarrow \min_{x\in F} -g(x)$
+\paragraph*{Bemerkung} $g\colon  D\rightarrow\R^n, \max_x\in F g(x) \Leftrightarrow \min_{x\in F} -g(x)$
 \paragraph[1.1.3]{Beispiel}
 $f(x)=x^3$ $\min f(x); Nb. x\geq 1$
 \paragraph[Def 1.1.4]{lokales Minimum} (zu Aufgabenstellung (P)) ein Punkt $x\in F$ heißt lokaler Minimalpunkt von $f$ auf $F$ oder lokale Lösung von (P), wenn es ein $r>0$ gibt, mit $f(x)\geq f(\tilde x)\forall x\in F \Cap B(\tilde x,r)$ Ein Punkt $\tilde x\in F$ heißt strikter lokaler Minimalpunkt von $f$ auf $F$ oder strikt lokale Lösung von (P), wenn es ein $r>0$ gibt mit $f(x)>f(\tilde x)\forall x F\Cap B(\tilde x,r), x\neq \tilde x$ \\
@@ -132,21 +132,21 @@ Ein Punkt $\tilde{x} \in F$ heißt globaler Minimalpunkt von $f$ auf $F$, wenn g
 Ei Punkt $ \tilde x \in F$ heißt strikter globaler Minimalpunkt von $f$ auf $F$ wenn gilt $ f(x) >f(\tilde x) \forall x\in F, x\neq \tilde x$.\\
 Ist $\tilde x$ lokale oder globale Lösung von (P), dann heißt $f(\tilde x)$ lokaler bzw. globaler Optimalwert.
 \paragraph*{Bemerkung} $min_{x\in F} f(x); min_{x\in F} f(x)+c c\in\R$ beliebig hat gleiche Stelle unterschiedlichen Optimalwert.
-\paragraph*{Spezialfall} quadratischen Funktionen. $H$ symm. $n\times n$-Matrix, $b\in\R^n, f: \R^n\rightarrow \R$ ist definiert durch $f(x)=\frac 12 x^THx+b^Tx$ (eindim $\frac 12 x^2 +bx$)\\
-$x^THx>0, \forall x\in \R^n x\neq 0_n$ positiv definit, auch wenn $\exists\alpha >0: x^THx \geq \alpha ||x||^2\forall x\in\R^n$\\
+\paragraph*{Spezialfall} quadratischen Funktionen. $H$ symm. $n\times n$-Matrix, $b\in\R^n, f\colon  \R^n\rightarrow \R$ ist definiert durch $f(x)=\frac 12 x^THx+b^Tx$ (eindim $\frac 12 x^2 +bx$)\\
+$x^THx>0, \forall x\in \R^n x\neq 0_n$ positiv definit, auch wenn $\exists\alpha >0\colon  x^THx \geq \alpha ||x||^2\forall x\in\R^n$\\
 $\nabla f(x)=(\frac{\delta f(x)}{\delta x_1} \ldots \frac{\delta f(x)}{\delta x_n})=f'(x)$.
 \paragraph[1.1.5]{Beispiel}Lineare Regression. Geg: Messwerte$(\xi_i, \eta_i), i=1,\ldots,m$, Zusammenhang zwischen $\xi$ und $\eta$-Werten
 $\eta (\xi)=g(\xi; x_1,x_2)=x_1\xi+x_2$ \\
-Wir definieren $f:\R^2\rightarrow\R$ durch \begin{align*}f(x)=f(x_1,x_2)&=\sum_{i=1}^m(g(\xi_i;x_1,x_2)-\eta_i)^2\\
+Wir definieren $f\colon \R^2\rightarrow\R$ durch \begin{align*}f(x)=f(x_1,x_2)&=\sum_{i=1}^m(g(\xi_i;x_1,x_2)-\eta_i)^2\\
 &=\sum(x_1\xi_i+x_2-\eta_i)^2\\
 &=x_1^2\sum\xi_i + mx_2^2+2 x_1x_2\sum\xi_i- 2x_1\sum \xi_i\eta_i-2x_2\sum\eta_i+\sum\eta_i^2\end{align*}
 Man bestimmt $\tilde x=(\tilde x_1, \tilde x_2)$ als Minimum von $f$. $f$ ist vom Typ $f(x)=\frac 12x^THx+b^Tx; H=\begin{pmatrix}H_{11} & H_{12}\\ H_{12} H_{22}\end{pmatrix}$
 
 \subsection{Existenz von Lösungen}
-$f:D\rightarrow \R, D\subset\R^n$ offen, $K\subset D$ kompakt, $f$ stetig auf $D$
+$f\colon D\rightarrow \R, D\subset\R^n$ offen, $K\subset D$ kompakt, $f$ stetig auf $D$
 Satz von Weierstraß
-\paragraph[1.2.1]{Def} Sei $f: D\rightarrow\R, D\subset\R^n, \alpha\in\R.$ Die Mengen $N(f,x)=\{x\in D|f(x)\leq\alpha\}$ heißen \textbf{Niveau-Mengen} von $f$.
-\begin{satz}[1.1.2] Sei $D\subset\R^n$. Die Fkt. $f:D\rightarrow\R$ sei stetig und für ein $\omega\in D$ sei die Niveaumenge $N(f,f(\omega))=\{x\in D| f(x)\leq f(\omega)\}$ kompakt. Dann gibt es (mindestens) ein globales Minimum von $f$ auf $D$.
+\paragraph[1.2.1]{Def} Sei $f\colon  D\rightarrow\R, D\subset\R^n, \alpha\in\R.$ Die Mengen $N(f,x)=\{x\in D|f(x)\leq\alpha\}$ heißen \textbf{Niveau-Mengen} von $f$.
+\begin{satz}[1.1.2] Sei $D\subset\R^n$. Die Fkt. $f\colon D\rightarrow\R$ sei stetig und für ein $\omega\in D$ sei die Niveaumenge $N(f,f(\omega))=\{x\in D| f(x)\leq f(\omega)\}$ kompakt. Dann gibt es (mindestens) ein globales Minimum von $f$ auf $D$.
 \begin{proof} Nach Satz von Weierstraß gibt es ein $\tilde x\in N(f,f(\omega))$ mit $f(\tilde x)\leq f(x)\forall x\in N(f,f(\omega))$. Für $x\notin N(f,f(\omega))$ gilt: $f(x)>f(\omega)\geq f(\tilde x)$\\
 $\Rightarrow f(\tilde x)\leq f(x)\forall x\in D$.
 \end{proof}
@@ -205,10 +205,10 @@ d.h. $ \tilde x $ ist striktes lokales Minimum von $ f $.
 \subsection{Konvexe Optimierungsaufgaben}
 Eine konvexe Optimierungsaufgabe ist:
 
-$ D\subseteq \R^n $ offen, $ F\subseteq D $ nichtleer und konvex, $ f:D\rightarrow \R $ sei konvex auf $ F $. 
+$ D\subseteq \R^n $ offen, $ F\subseteq D $ nichtleer und konvex, $ f\colon D\rightarrow \R $ sei konvex auf $ F $. 
 \begin{gather}\tag{P} \min\limits_{x\in F}f(x) \end{gather}
 
-\begin{satz}[3.2.1] $ D\subseteq \R^n $ offen $ f:D\rightarrow \R $ sei differenzierbar, $ F\subseteq D $ nichtleer und konvex. Dann gilt: 
+\begin{satz}[3.2.1] $ D\subseteq \R^n $ offen $ f\colon D\rightarrow \R $ sei differenzierbar, $ F\subseteq D $ nichtleer und konvex. Dann gilt: 
 
 $ f $ ist konvex auf $ F \quad \Leftrightarrow$
 \begin{gather}\tag{3.2.1} f(y)\geq f(x)+f'(x)(y-x) \qquad \forall x,y\in F\end{gather}
@@ -221,30 +221,30 @@ $ f $ ist konvex auf $ F \quad \Leftrightarrow$
 \begin{satz}
 $f$ zweimal stetig differenzierbar, für $\tilde x  \in F$ gelte notwendige Optimalitätbedingung ($\nabla f (\tilde x)=0_n$) und $f''$ posotiv definit auf $F$ d.h. 
 \begin{gather}\tag{3.2.4}
-\forall z\in F: \quad x^Tf''(z)x>0 \qquad \forall x\in\R^n, x\neq 0_n
+\forall z\in F\colon  \quad x^Tf''(z)x>0 \qquad \forall x\in\R^n, x\neq 0_n
 \end{gather}
 das ist $\tilde x$ striktes globales Minimum von $f$ auf $F$.
 \end{satz}
 
 \begin{defin}
-$D\subseteq\R^n, f:D\rightarrow\R, F\subseteq D$ nichtleer und konvex. Die Funktion $f$ heißt \textbf{gleichmäßig konvex} auf $F$, wenn es ein $\alpha > 0$ gibt, mit 
+$D\subseteq\R^n, f\colon D\rightarrow\R, F\subseteq D$ nichtleer und konvex. Die Funktion $f$ heißt \textbf{gleichmäßig konvex} auf $F$, wenn es ein $\alpha > 0$ gibt, mit 
 
 $(1-t)f(x)+tf(y)\geq f((1-t)x+ty)+t(1-t)\alpha ||x-y||^2 \qquad\forall x,y \in F \quad \forall f \in [0,1]$.
 \end{defin}
 
 \begin{satz}
-$D\subseteq\R^n$ offen, $F\subseteq D$ nichtleer und konvex, $f:D\rightarrow\R$ sei differenzierbar. Dann ist $f$ gleichmäßig konvex auf $F$ genau dann wenn gilt:
+$D\subseteq\R^n$ offen, $F\subseteq D$ nichtleer und konvex, $f\colon D\rightarrow\R$ sei differenzierbar. Dann ist $f$ gleichmäßig konvex auf $F$ genau dann wenn gilt:
 \begin{gather}\tag{3.2.5}
 f(y)-f(x)\geq \nabla f (x)^T(y-x)+\alpha||x-y||^2 \quad \forall x,y\in F
 \end{gather}
 \end{satz}
 
-\paragraph*{Bemerkung} Für ein festes $x\in\R^n$ ist $q:\R^n\rightarrow\R$ definiert durch $q(y)=f(x)+\nabla f(x)^t(x-y)+\alpha ||x-y||^2$ eine quadratische Funktion. (3.2.5) ist äquivalent zu $f(y)\geq q(y)$.
+\paragraph*{Bemerkung} Für ein festes $x\in\R^n$ ist $q\colon \R^n\rightarrow\R$ definiert durch $q(y)=f(x)+\nabla f(x)^t(x-y)+\alpha ||x-y||^2$ eine quadratische Funktion. (3.2.5) ist äquivalent zu $f(y)\geq q(y)$.
 
 Es gilt $q(x)=f(x)$. $\nabla q(x)=\nabla f(x)$ ($\nabla q(x)=\nabla f(x)+2\alpha(y-x)$). Das heißt es gibt eine quadratische Funktion die unter der eigentlichen Kurve liegt. 
 
 \begin{satz}
-Sei $D\subseteq \R^n$ offen, $F\subseteq D$ nichtleer und konvex.  $f:D\rightarrow\R$ sei zweimal stetig differenzierbar. Ist $f''$ gleichmäßig positiv definit auf $F$, d.h. es gibt ein $\beta >0$ (unabhängig von $x\in F$), so dass gilt:
+Sei $D\subseteq \R^n$ offen, $F\subseteq D$ nichtleer und konvex.  $f\colon D\rightarrow\R$ sei zweimal stetig differenzierbar. Ist $f''$ gleichmäßig positiv definit auf $F$, d.h. es gibt ein $\beta >0$ (unabhängig von $x\in F$), so dass gilt:
 \begin{gather}\tag{3.2.6}
 y^Tf''(x)y\geq \beta ||y||^2\quad \forall y\in\R^n
 \end{gather}
@@ -255,7 +255,7 @@ dann ist $f$ gleichmäßig konvex auf $F$. Ist $F$ offen, dann folgt aus der gle
 Betrachtet wird das Problem:
 \begin{gather*}\tag{PU}
 \min f(x)\\
-f:\R^n\rightarrow \R (D=\R^n)
+f\colon \R^n\rightarrow \R (D=\R^n)
 \end{gather*}
 \subsection{Gundlagen}
 Standardvorraussetzung:
@@ -269,7 +269,7 @@ Standardvorraussetzung:
 \end{gather}
 \paragraph{Bemerkung} benutzt man ein Nullstellenverfahren und eine Lösung von (4.1.2) zu berechnen, dann geht die Information "`Min"' verloren. Besser: Abstiegsverfahren, d.h. man berechnet ausgehen von einem Startpunkt $x^{(0)}$ eine Folge $\{x^{(k)}\}_{k\in\mathbb N}$ mit $f(x^{(k+1)})<f(x^{(k)}, \quad k=0,1,2,\ldots$.
 
-\begin{lemma}[4.1.1] $f:\R^n\rightarrow \R$ sei differenzierbar in $x\in\R^n$. Weiter sei $d\in\R^n$ eine Richtung mit 
+\begin{lemma}[4.1.1] $f\colon \R^n\rightarrow \R$ sei differenzierbar in $x\in\R^n$. Weiter sei $d\in\R^n$ eine Richtung mit 
 \begin{gather}
 \tag{4.1.3} \nabla f(x)^Td<0
 \end{gather}
@@ -277,7 +277,7 @@ Dann gibt es ein $\bar \sigma >0$ mit $f(x+\sigma d)< f(x) \quad \forall \sigma 
 \end{lemma}
 
 \begin{defin}
-[4.1.2] Sei $f:\R^n\rightarrow \R$ differenzierbar in $x\in\R^n$. Dann heißt $d\in\R^n$ \textbf{Abstiegsrichtung} von $f$ in $x$, wenn (4.1.3) gilt.
+[4.1.2] Sei $f\colon \R^n\rightarrow \R$ differenzierbar in $x\in\R^n$. Dann heißt $d\in\R^n$ \textbf{Abstiegsrichtung} von $f$ in $x$, wenn (4.1.3) gilt.
 \end{defin}
 
 \paragraph*{Bemerkung} Ist in $x\in\R^n$ die Optimalitätbedingung $\nabla f (x)=0_n$ nicht erfüllt, (d.h. $\nabla f(x)\neq 0_n$) dann gibt es in $x$ (mindestens) eine Abstiegsrichtung.
@@ -315,7 +315,7 @@ Wichtig: berechnete Ableitung überprüfen!
 Matlab: Parameter DerivativeCheck auf den Wert 'on' setzen.
 
 \subsection{Das Newtonverfahren}
-Gegeben eine Abbildung $F:\R^n\rightarrow\R^n$ Aufgabe: Berechne eine (lokale) Lösung $\tilde x$ von $F(x)=0_n$. $F$ sei differenzierbar.
+Gegeben eine Abbildung $F\colon \R^n\rightarrow\R^n$ Aufgabe: Berechne eine (lokale) Lösung $\tilde x$ von $F(x)=0_n$. $F$ sei differenzierbar.
 \paragraph{Newtonverfahren}
 \begin{itemize}
 \item wähle Startpunkt $x^{(0)}$
@@ -329,7 +329,7 @@ x^{(k+1)}=x^{(k)}-F'(x^{(k)})^{-1}F(x^{(k)})
 \end{gather*}
 \end{itemize}
 
-\begin{lemma}[4.3.1] Sei $D\subseteq \R^n$ offen, $C\subseteq D$ konvex, $F:D\rightarrow \R^n$ differenzierbar und $F'$ sei Lipschitzstetig auf $C$, d.h. mit einer Konstante $L\geq 0$ gilt $||F'(x)-F'(y)||\leq L||x-y|| \quad \forall x,y\in C.$ Dann gilt: $||F(x)-F(y)-F'(y)(x-y)||\leq \frac L2 ||x-y||^2$
+\begin{lemma}[4.3.1] Sei $D\subseteq \R^n$ offen, $C\subseteq D$ konvex, $F\colon D\rightarrow \R^n$ differenzierbar und $F'$ sei Lipschitzstetig auf $C$, d.h. mit einer Konstante $L\geq 0$ gilt $||F'(x)-F'(y)||\leq L||x-y|| \quad \forall x,y\in C.$ Dann gilt: $||F(x)-F(y)-F'(y)(x-y)||\leq \frac L2 ||x-y||^2$
 
 \end{lemma}
 
@@ -348,7 +348,7 @@ Dann ist $\tilde x$ der einzige Fixpunkt von $G$ in $\bar B (\tilde x,r)$. Weite
 \end{lemma}
 
 \begin{satz}[4.3.4]
-Sei $D\subseteq \R^n$ offen,$F:D\rightarrow \R^n, \tilde x\in D$ mit $F(\tilde x)=0_n$. Weiter gelte:
+Sei $D\subseteq \R^n$ offen,$F\colon D\rightarrow \R^n, \tilde x\in D$ mit $F(\tilde x)=0_n$. Weiter gelte:
 \begin{itemize}
 \item [a)] $F$ ist differenzierbar auf $D$, und $F'$ ist Lipschitzstetig, d.h. $||F'(x)-F'(y)||\leq L||x-y|| \quad \forall x,y\in D.$ mit $L\geq 0$
 \item [b)] $F'(\tilde x)$ ist nichtnegativ
@@ -452,7 +452,7 @@ Richtung $d$ heißt \textbf{streng gradientenbezogen} in $x$, wenn zusätzlich g
 
 Die Newton-Richtung $d^{(k)}=-f''(x^{(k)})^{-1}\nabla f(x^{(k)}$ ist streng gradientenbezogen unter der Vorraussetzung:
 \begin{gather*}
-\tag{4.4.13} f:\R^n\rightarrow\R \text{ stetig, }x^{(0)}\in\R^n, ~D\supseteq N(f,f(x^{(k)})) \text{ nichtleer, offen, konvex, }
+\tag{4.4.13} f\colon \R^n\rightarrow\R \text{ stetig, }x^{(0)}\in\R^n, ~D\supseteq N(f,f(x^{(k)})) \text{ nichtleer, offen, konvex, }
 \\ \text{$f$ sei zweimal stetig differenzierbar auf $D$ und mit Konstante $\alpha>0$ gelte:}\\
 y^Tf''(x)y\geq \alpha ||y||^2 \quad \forall y\in D
 \end{gather*}
@@ -471,13 +471,13 @@ Man definiert $D^{\frac 12}=\text{diag}(\lambda_1^{\frac 12}\leq\ldots\leq \lamb
 
 Man bezeichnet $A^{\frac 12}$ als positive Quadratwurzel von $A$. (Entsprechend $A^{-\frac 12}$)
 
-\begin{lemma}[4.4.6] Vorraussetzung (4.4.13) sei erfüllt. Dann ist $f$ gleichmäßig konvex auf $D$, die Niveaumenge $N(f,f(x^{(0)}))$ ist konvex und kompakt und  $\exists\alpha_2>0:\quad \forall x\in N(f,f(x^{(0)})):$
+\begin{lemma}[4.4.6] Vorraussetzung (4.4.13) sei erfüllt. Dann ist $f$ gleichmäßig konvex auf $D$, die Niveaumenge $N(f,f(x^{(0)}))$ ist konvex und kompakt und  $\exists\alpha_2>0\colon \quad \forall x\in N(f,f(x^{(0)}))\colon $
 \begin{gather*}
 \tag{4.4.14}y^Tf''(x)y\geq \alpha_2 ||y||^2 \quad \forall y\in \R^n
 \end{gather*}
 und $||f''(x)||\leq \alpha_2$ gilt. 
 
-Weiter gilt mit $\beta_1=\frac 1{\alpha_2},\quad \beta_2=\frac 1{\alpha_1},\quad \forall x\in N(f,f(x^{(0)})):$
+Weiter gilt mit $\beta_1=\frac 1{\alpha_2},\quad \beta_2=\frac 1{\alpha_1},\quad \forall x\in N(f,f(x^{(0)}))\colon $
 \begin{gather*}
 \tag{4.4.15} \beta_1 ||y||^2\leq y^Tf''(x)^{-1}y\leq \beta_2 ||y||^2
 \end{gather*}
@@ -516,7 +516,7 @@ Vorraussetzungen (4.1.1), (4.4.10). Weiter seien $x\in N(f,f(x^{(0)})), \quad d\
 Dann gilt für die exakte Schrittweite $\sigma_E$:
 
 \begin{gather*}\tag{4.5.2}
-\sigma_E \leq -\frac{\nabla f(x)^Td}{L||d||^2}=:\tilde \sigma \quad \text{d.h. $\sigma_E$ erfüllt (4.4.8))}
+\sigma_E \leq -\frac{\nabla f(x)^Td}{L||d||^2}=\colon \tilde \sigma \quad \text{d.h. $\sigma_E$ erfüllt (4.4.8))}
 \end{gather*}
 wobei $L$ die Lipschitz-Konstante von $f'$ ist und
 \begin{gather*}\tag{4.5.3}
@@ -642,7 +642,7 @@ Werden die Schrittweiten $\sigma_k$ als exakte Schrittweite oder als Armijo-Schr
 in $x^{(k)}$ wählt man $-\nabla f(x^{(k)})$ als Suchrichtung. $\Rightarrow$ Suchrichtungen streng gradientenbezogen.
 
 \subsubsection{Richtung des steilsten Abstiegs} 
-$f:\R^n\rightarrow \R$ sei differenzierbar. Im Punkt $x\in\R^n$ sei $\nabla f(x)\neq 0_n$.\\
+$f\colon \R^n\rightarrow \R$ sei differenzierbar. Im Punkt $x\in\R^n$ sei $\nabla f(x)\neq 0_n$.\\
 Richtung des steilsten Abstiegs in Punkt $x$.
 \begin{gather*}\tag{4.6.1}
 \min\limits_{d\in\R^n}\nabla f(x)^td \qquad \text{Nb.: }||d||=1
@@ -731,7 +731,7 @@ Ist $A$ positiv definit, dann wird durch $||x||_A=\langle x,x \rangle ^{\frac 12
 \min \nabla f(x)^Td \qquad \text{ Nb. } ||d||_A=1
 \end{gather*}
 
-\begin{lemma}[4.7.2] $f:\R^n\rightarrow\R$ sei in $x$ differenzierbar mit $\nabla f(x)\neq 0$. $A$ sei symmetrisch positiv definite Matrix. Dann ist die Lösung von (4.7.1): $\bar d=-\frac{A^{-1}\nabla f(x)}{||A^{-1}\nabla f (x)||_A}$.
+\begin{lemma}[4.7.2] $f\colon \R^n\rightarrow\R$ sei in $x$ differenzierbar mit $\nabla f(x)\neq 0$. $A$ sei symmetrisch positiv definite Matrix. Dann ist die Lösung von (4.7.1): $\bar d=-\frac{A^{-1}\nabla f(x)}{||A^{-1}\nabla f (x)||_A}$.
 \begin{proof}
 Sei $d\in\R^n$. Dann gilt: $\nabla f(x)^T d = \nabla f(x)^T A^{-1}Ad= \langle A^{-1}\nabla f (x) , Ad \rangle = \langle A^{-1} \nabla f(x), d \rangle _A \geq - ||A^{-1}\nabla f(x)||_A||d||_A$ Für $d\in\R^n$ mit $||d||_A=1 \Rightarrow$
 
@@ -760,7 +760,7 @@ Antwort:  ja, aber nur lokal, wenn man:
 Ziel: Zeige, dass für hinreichend großes $k$ (d.h. $x^{(k)}$ hinreichend nahe bei $\tilde x$) diese Schrittweite die Abstiegsbedingung in Schritt 2 des Armijo-Verfahrens erfüllt (dann ist die vom Armijo-Verfahren "`berechnete"'Schrittweite 1).
 
 \paragraph{zusätzliche Vorraussetzungen}\begin{gather*}\tag{4.7.2}
-\exists L_2>0,\quad \exists r>0: \quad || f''(x)-f''(y)||\leq L_2||x-y||\quad \forall x,y\in B(\tilde x, r)
+\exists L_2>0,\quad \exists r>0\colon  \quad || f''(x)-f''(y)||\leq L_2||x-y||\quad \forall x,y\in B(\tilde x, r)
 \end{gather*}
 
 \paragraph{Bemerkung 4.7.3} Ist $x^{(k)}\neq \tilde x$, dann gilbt es ein $r>0$ mit $B(\tilde x, r)\subseteq D$ und $f(x)<f(x^{(k)})\quad \forall x\in B(\tilde x, r)$, d.h. $B(\tilde x, r)\subseteq N(f,f(x^{(k)}))$, d.h. $\tilde x\in \text{int}N(f,f(x^{(k)}))$.
@@ -824,7 +824,7 @@ Für die exakte Schrittweite $\sigma_k$ gilt nach (4.5.4) mit $\lambda_k\in]0,1[
 $$\sigma_k =-\frac{\nabla f(x^{(k)})^T  d^{(k)}}{(d^{(k)})^Tf''(x^{(k)}+\lambda_k \sigma_k d^{(k)}) d^{(k)}}=\frac{(d^{(k)})^Tf''(x^{(k)}) d^{(k)}}{(d^{(k)})^Tf''(x^{(k)}+\lambda_k \sigma_k d^{(k)}) d^{(k)}}$$
 Wegen (4.4.13) und Lemma 4.4.6:
 $$\sigma_k \leq \frac {\alpha_2 ||d^{(k)}||^2}{\alpha_1 ||d^{(k)}||^2}=\frac {\alpha_2}{\alpha_1}$$
-Weiter gilt wegen $x^{(k)}\rightarrow \tilde x, x^{(k)}+\lambda_k d^{(k)}\rightarrow \tilde x: \qquad \sigma_k\rightarrow 1$. 
+Weiter gilt wegen $x^{(k)}\rightarrow \tilde x, x^{(k)}+\lambda_k d^{(k)}\rightarrow \tilde x\colon  \qquad \sigma_k\rightarrow 1$. 
 
 Wir zeigen: $\exists k_0\in \N$ und eine von $k$ unabhängige Konstante $c_5$ mit 
 \begin{gather*}\tag{4.7.4}
