Einige Verweise aufgelöst
git-svn-id: https://svn.lug-jena.de/uni-skripte@3238 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/alt-nichtlinopt/skript.ltx
+++ b/alt-nichtlinopt/skript.ltx
@@ -55,6 +55,17 @@
 \newtheorem*{lemma}{Lemma}
 \theoremstyle{definition}
 \newtheorem*{defin}{Definition}
+% Hier die Definition, wie \autoref die Umgebungen nennen soll, die mit
+% \newtheorem definiert wurden
+\newcommand*{\satzautorefname}{Satz}
+\newcommand*{\bemerkautorefname}{Bemerkung}
+\newcommand*{\definiautorefname}{Definition}
+\newcommand*{\bspautorefname}{Beispiel}
+\newcommand*{\festlautorefname}{Festlegung}
+% Zwischen Unter- und Unterunterabschnitten sollte nicht unterschieden
+% werden.
+\renewcommand*{\subsectionautorefname}{Abschnitt}
+\renewcommand*{\subsubsectionautorefname}{Abschnitt}
 
 
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
@@ -158,8 +169,12 @@ Man bestimmt $\tilde x=(\tilde x_1, \tilde x_2)$ als Minimum von $f$. $f$ ist vo
 \subsection{Existenz von Lösungen}
 $f\colon D\rightarrow \R, D\subset\R^n$ offen, $K\subset D$ kompakt, $f$ stetig auf $D$
 Satz von Weierstraß
-\paragraph[1.2.1]{Def} Sei $f\colon  D\rightarrow\R, D\subset\R^n, \alpha\in\R.$ Die Mengen $N(f,x)=\{x\in D|f(x)\leq\alpha\}$ heißen \textbf{Niveau-Mengen} von $f$.
-\begin{satz}[1.1.2] Sei $D\subset\R^n$. Die Fkt. $f\colon D\rightarrow\R$ sei stetig und für ein $\omega\in D$ sei die Niveaumenge $N(f,f(\omega))=\{x\in D| f(x)\leq f(\omega)\}$ kompakt. Dann gibt es (mindestens) ein globales Minimum von $f$ auf $D$.
+\paragraph[1.2.1]{Def} Sei $f\colon  D\rightarrow\R, D\subset\R^n,
+\alpha\in\R.$ Die Mengen $N(f,x)=\{x\in D|f(x)\leq\alpha\}$ heißen
+\textbf{Niveau-Mengen} von $f$.
+%satz 1.1.2
+% Das ist wahrscheinlich Satz 1.2.2
+\begin{satz}[1.1.2]\label{satz:1.2.2} Sei $D\subset\R^n$. Die Funktion $f\colon D\rightarrow\R$ sei stetig und für ein $\omega\in D$ sei die Niveaumenge $N(f,f(\omega))=\{x\in D| f(x)\leq f(\omega)\}$ kompakt. Dann gibt es (mindestens) ein globales Minimum von $f$ auf $D$.
 \begin{proof} Nach Satz von Weierstraß gibt es ein $\tilde x\in N(f,f(\omega))$ mit $f(\tilde x)\leq f(x)\forall x\in N(f,f(\omega))$. Für $x\notin N(f,f(\omega))$ gilt: $f(x)>f(\omega)\geq f(\tilde x)$\\
 $\Rightarrow f(\tilde x)\leq f(x)\forall x\in D$.
 \end{proof}
@@ -173,16 +188,21 @@ Nichtlineare Regression (2.3.1)
 Ein Einschub mit Theorie aus 1.7
 \subsection{Optimalitätbedingungen}
 \subsubsection{Notwendige Bedingungen 1. Ordnung}
-\begin{satz}[3.1.1] $f$ in $x\in D$ differenzierbar, $\tilde x$ lokales Minimum, dann:\\
-\begin{gather}\tag{3.1.1} \nabla f(\tilde x)^T d \geq 0; \qquad \forall d\in \R^n \end{gather}
+% satz 3.1.1
+\begin{satz}[3.1.1]\label{satz:3.1.1} $f$ in $x\in D$ differenzierbar, $\tilde x$ lokales Minimum, dann:
+\begin{gather}
+  \nabla f(\tilde x)^T d \geq 0; \qquad \forall d\in \R^n
+\end{gather}
 \end{satz}
 \paragraph{Bemerkung} Ist in einem $x\in d$ mit $\nabla f(\tilde x)^T d < 0$ dann $d$ Abstiegsrichtung. 
 
-Aus (3.1.1) folgt $\nabla f(\tilde x)^T d \geq -\nabla f(\tilde x)^T d \geq 0\qquad \forall d \in \R^n$\\
+Aus \autoref{satz:3.1.1} folgt $\nabla f(\tilde x)^T d \geq -\nabla f(\tilde x)^T d \geq 0\qquad \forall d \in \R^n$\\
 $\Rightarrow \nabla f(\tilde x)^T d =0 \Rightarrow \nabla f(\tilde x)=0_n$.
 
-Dann ist (3.1.1) äquivalent zu $\nabla f(\tilde x)=0_n$ also ist folgender Satz äquivalent zu Satz 3.1.1
-\begin{satz}[3.1.2] $f$ sei in $\tilde x$ differenzierbar. Ist $\tilde x$ lokales Minimum von $f$,  dann gilt
+Dann ist \autoref{satz:3.1.1} äquivalent zu $\nabla f(\tilde x)=0_n$
+also ist folgender Satz äquivalent zu \autoref{satz:3.1.1}:
+% satz 3.1.2
+\begin{satz}[3.1.2]\label{satz:3.1.2} $f$ sei in $\tilde x$ differenzierbar. Ist $\tilde x$ lokales Minimum von $f$,  dann gilt
 \begin{gather}\tag{3.1.2}\nabla f(\tilde x)=f'(\tilde x)=0\end{gather}
 \end{satz}
 
@@ -190,22 +210,27 @@ Dann ist (3.1.1) äquivalent zu $\nabla f(\tilde x)=0_n$ also ist folgender Satz
 
 \begin{defin}[3.1.4]  $f$ sei in $\tilde x \in D $ differenzierbar. Ist $\nabla f(\tilde x)=0_n$, dann heißt $\tilde x$ \textbf{stationärer Punkt} von $f$.
 \end{defin}
-\paragraph{Bem} Stationäre Punkte erfüllen die notwendige Optimalitätbedingungen (3.1.2) und sind damit "Kandidaten" für ein lokales Minimum.
+\paragraph{Bem} Stationäre Punkte erfüllen die notwendige
+Optimalitätbedingungen aus \autoref{satz:3.1.2} und sind damit "`Kandidaten"' für ein lokales Minimum.
 \subsubsection{Notwedige Bedingungen 2. Ordnung}
-\begin{satz}[3.1.6] $f$ sei in einer Umgebung von $\tilde x \in D$ 2 mal stetig differenzierbar. Ist $\tilde x$ lokales Minimum von $f$, dann gilt (3.1.2) und 
+\begin{satz}[3.1.6] $f$ sei in einer Umgebung von $\tilde x \in D$ 2
+  mal stetig differenzierbar. Ist $\tilde x$ lokales Minimum von $f$,
+  dann gilt \autoref{satz:3.1.2} und 
 \begin{gather}\tag{3.1.3} x^Tf''(\tilde x)\geq 0 \qquad \forall x\in\R^n
 \end{gather}
 (d.\,h.: $f''(\tilde x)$ ist positiv semidefinit)
 \end{satz}
 
 \subsubsection{Hinreichende Bedingung zweiter Ordnung}
-\begin{satz}[3.1.10] $f$ in Umgebung von $\tilde x \in D$ 2mal stetig differenzierbar. Die notwendige Optimalitätbedingung (3.1.2)(=$\nabla f(\tilde x)=0_n$) sei erfüllt, und mit einem $\delta >0$ gelte $\forall z\in B(\tilde x, \delta)$:
+\begin{satz}[3.1.10] $f$ in Umgebung von $\tilde x \in D$ 2mal stetig
+  differenzierbar. Die notwendige Optimalitätbedingung aus
+  \autoref{satz:3.1.2} (=$\nabla f(\tilde x)=0_n$) sei erfüllt, und mit einem $\delta >0$ gelte $\forall z\in B(\tilde x, \delta)$:
 \begin{gather}\tag{3.1.4} x^Tf''(z)x \geq 0 \quad \forall x\in\R^n\end{gather} (d.\,h. $f''(z)$ ist in einer Umgebung $B(\tilde x, \delta)$ von $\tilde x$ positiv semidefinit). 
 
 Dann ist $\tilde x$ lokales Minimum von $f$.
 \end{satz}
 
-\begin{satz}[3.1.11] $ f $ sei in einer Umgebung von $ \tilde x \in D $ zweimal stetig differenzierbar. Die notwendige Optimalitätsbedingung (3.1.2), $ \nabla f(\tilde x)=0_n $, sei erfüllt, und $ f''(\tilde{x}) $ sei positiv definit, d.\,h. mit einem $ \alpha > 0 $ gilt:
+\begin{satz}[3.1.11] $ f $ sei in einer Umgebung von $ \tilde x \in D $ zweimal stetig differenzierbar. Die notwendige Optimalitätsbedingung (\autoref{satz:3.1.2}), $ \nabla f(\tilde x)=0_n $, sei erfüllt, und $ f''(\tilde{x}) $ sei positiv definit, d.\,h. mit einem $ \alpha > 0 $ gilt:
 \begin{gather}\tag{3.1.5} x^Tf''(\tilde x )x \geq \alpha \norm{x}^2\quad \forall x \in \R^n.\end{gather}
 Dann gibt es $ r>0, \quad \beta >0 $ mit: 
 \begin{gather*} f(x)\geq f(\tilde x)+\beta \norm{x-\tilde x}^2 \quad \forall x\in B(\tilde x, r)\end{gather*}
@@ -231,7 +256,7 @@ $ f $ ist konvex auf $ F \quad \Leftrightarrow$
 
 
 \begin{satz}
-$f$ zweimal stetig differenzierbar, für $\tilde x  \in F$ gelte notwendige Optimalitätbedingung ($\nabla f (\tilde x)=0_n$) und $f''$ posotiv definit auf $F$ d.\,h. 
+$f$ zweimal stetig differenzierbar, für $\tilde x  \in F$ gelte notwendige Optimalitätbedingung ($\nabla f (\tilde x)=0_n$) und $f''$ positiv definit auf $F$ d.\,h. 
 \begin{gather}\tag{3.2.4}
 \forall z\in F\colon  \quad x^Tf''(z)x>0 \qquad \forall x\in\R^n, x\neq 0_n
 \end{gather}
@@ -246,21 +271,23 @@ $(1-t)f(x)+tf(y)\geq f((1-t)x+ty)+t(1-t)\alpha \norm{x-y}^2 \qquad\forall x,y \i
 
 \begin{satz}
 $D\subseteq\R^n$ offen, $F\subseteq D$ nichtleer und konvex, $f\colon D\rightarrow\R$ sei differenzierbar. Dann ist $f$ gleichmäßig konvex auf $F$ genau dann wenn gilt:
-\begin{gather}\tag{3.2.5}
+\begin{gather}\label{eq:3.2.5}
 f(y)-f(x)\geq \nabla f (x)^T(y-x)+\alpha\norm{x-y}^2 \quad \forall x,y\in F
 \end{gather}
 \end{satz}
 
-\paragraph*{Bemerkung} Für ein festes $x\in\R^n$ ist $q\colon \R^n\rightarrow\R$ definiert durch $q(y)=f(x)+\nabla f(x)^t(x-y)+\alpha \norm{x-y}^2$ eine quadratische Funktion. (3.2.5) ist äquivalent zu $f(y)\geq q(y)$.
+\paragraph*{Bemerkung} Für ein festes $x\in\R^n$ ist $q\colon
+\R^n\rightarrow\R$ definiert durch $q(y)=f(x)+\nabla
+f(x)^t(x-y)+\alpha \norm{x-y}^2$ eine quadratische Funktion. Der \autoref{eq:3.2.5} ist äquivalent zu $f(y)\geq q(y)$.
 
 Es gilt $q(x)=f(x)$. $\nabla q(x)=\nabla f(x)$ ($\nabla q(x)=\nabla f(x)+2\alpha(y-x)$). Das heißt es gibt eine quadratische Funktion die unter der eigentlichen Kurve liegt. 
 
 \begin{satz}
 Sei $D\subseteq \R^n$ offen, $F\subseteq D$ nichtleer und konvex.  $f\colon D\rightarrow\R$ sei zweimal stetig differenzierbar. Ist $f''$ gleichmäßig positiv definit auf $F$, d.\,h. es gibt ein $\beta >0$ (unabhängig von $x\in F$), so dass gilt:
-\begin{gather}\tag{3.2.6}
+\begin{gather}\label{eq:3.2.6}
 y^Tf''(x)y\geq \beta \norm{y}^2\quad \forall y\in\R^n
 \end{gather}
-dann ist $f$ gleichmäßig konvex auf $F$. Ist $F$ offen, dann folgt aus der gleichmäßigen Konvexität von $f$ auf $F$ auch (3.2.6).
+dann ist $f$ gleichmäßig konvex auf $F$. Ist $F$ offen, dann folgt aus der gleichmäßigen Konvexität von $f$ auf $F$ auch \autoref{eq:3.2.6}.
 \end{satz}
 
 \section{Unrestringierte Optimierungsprobleme: Verfahren}
@@ -269,17 +296,17 @@ Betrachtet wird das Problem:
 \min f(x)\\
 f\colon \R^n\rightarrow \R (D=\R^n)
 \end{gather*}
-\subsection{Gundlagen}
+\subsection{Grundlagen}
 Standardvorraussetzung:
-\begin{gather*}\tag{4.1.1}
+\begin{gather*}\label{eq:4.1.1}
 \text{Mit einem gegebenen }x^{(0)}\in\R^n \text{ ist die Niveaumenge }\\ N(f,f(x^{(0)}))=\{x\in\R^n | f(x)\leq f(x^{(0)})\} \text{ kompakt.}\\\text{ Die Zielfunktion }f \text{ ist auf einer konvexen, offenen Obermenge }D_0 \text{ von }N(f,f(x^{(0)}))
 \end{gather*}
 
-\paragraph{Bemerkung} Ist (4.1.1) erfüllt, dann gibt  es nach Satz 1.2.2. mindestens eine lokale Lösung von (P), und für jede lokale Lösung $\tilde x$ gilt es nach Satz 3.1.2:
-\begin{gather}
-\tag{4.1.2} \nabla f (\tilde x)=0_n
+\paragraph{Bemerkung} Ist \autoref{eq:4.1.1} erfüllt, dann gibt  es nach \autoref{satz:1.2.2} mindestens eine lokale Lösung von (P), und für jede lokale Lösung $\tilde x$ gilt es nach \autoref{satz:3.1.2}:
+\begin{gather}\label{eq:4.1.2}
+  \nabla f (\tilde x)=0_n
 \end{gather}
-\paragraph{Bemerkung} benutzt man ein Nullstellenverfahren und eine Lösung von (4.1.2) zu berechnen, dann geht die Information "`Min"' verloren. Besser: Abstiegsverfahren, d.\,h. man berechnet ausgehen von einem Startpunkt $x^{(0)}$ eine Folge $\{x^{(k)}\}_{k\in\mathbb N}$ mit $f(x^{(k+1)})<f(x^{(k)}, \quad k=0,1,2,\ldots$.
+\paragraph{Bemerkung} benutzt man ein Nullstellenverfahren und eine Lösung von \autoref{eq:4.1.2} zu berechnen, dann geht die Information "`Min"' verloren. Besser: Abstiegsverfahren, d.\,h. man berechnet ausgehen von einem Startpunkt $x^{(0)}$ eine Folge $\{x^{(k)}\}_{k\in\mathbb N}$ mit $f(x^{(k+1)})<f(x^{(k)}, \quad k=0,1,2,\ldots$.
 
 \begin{lemma}[4.1.1] $f\colon \R^n\rightarrow \R$ sei differenzierbar in $x\in\R^n$. Weiter sei $d\in\R^n$ eine Richtung mit 
 \begin{gather}
