--- a/kubieziel-itsich/simodell.ltx
+++ b/kubieziel-itsich/simodell.ltx
@@ -53,7 +53,7 @@
   \frametitle{Objekte und Subjekte}
   \framesubtitle{Grobkörnige Modellierung}
   \begin{itemize}
-  \item<+-> Objekte werden Schutzwürdigkeit geprüft
+  \item<+-> Objekte werden auf Schutzwürdigkeit geprüft
   \item<+-> Zugriffskontrolle geschieht nur für zu schützende Objekte
   \item<+-> unvollständige Erfassung führt zu Sicherheitslücken (Keine
     Kontrolle für nicht erfasste Objekte)
