--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -73,6 +73,9 @@
                             % (df/dx). Das d wird korrekt in roman
                             % gesetzt. Verwendung: \diff{f}{x} oder
                             % \diffp{f}{x} für partielle Ableitungen
+\usepackage{braket}
+\usepackage{nicefrac}
+\usepackage{wasysym}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -182,14 +185,7 @@
 % ... und mancheinem gefällt auch das Phi nicht
 \renewcommand*{\phi}{\varphi}
 
-% Manchmal möchte man Begriffe erklären oder etwas aufzählen, das aber
-% nicht fett gedruckt werden soll. Dazu diese Umdefinition einer
-% description mit normaler Schrift
-\newenvironment*{mdescription}%
-                {\renewcommand*{\descriptionlabel}[1]%
- 			       {\hspace\labelsep\normalfont ##1}%
-		 \begin{description}}%
-		{\end{description}}
+\DeclareMathOperator{\conv}{conv}
 
 \makeindex
 
@@ -263,6 +259,109 @@
 % \theoremlisttype{all}
 \listtheorems{defini,festl}
 
+% Vorlesung vom 13.4.2011
+\chapter{Teilbarkeit konvexer Mengen (disjunkte Pflasterungen)}
+
+\section{Konvexität und m-Teilbarkeit}
+
+\subsection{Konvexe Mengen und affine Abbildungen}
+
+\begin{defini}
+  \begin{enumerate}
+   \item Eine Teilmenge~$K$ eines reellen Vektorraums $X$ heißt
+    \highl{konvex}, wenn $\forall x,y\in
+    K\,\forall\lambda\in(0,1)\colon(\lambda x+(1-\lambda)y\in K)$.
+   \item Ist $M\subseteq X$, so heißt $\conv(M)=\bigcap_{K \text{ konvex},
+    M\subseteq K} K$ \highl{konvexe Hülle} von $M$.
+  \end{enumerate}
+\end{defini}
+
+\begin{bsp}
+  \begin{enumerate}
+   \item Jede Kugel $B(x,r)=\Set{y\in X | \norm{y-x}\leq r}$ mit $x\in X,
+    r\geq0$ eines normierten Raumes $(X,\norm{\cdot})$ ist konvex. Denn seien
+    $y,z\in B(x,r), \lambda\in(0,1)$. Dann ist $\norm{\lambda y+(1-\lambda)z
+    -x}= \norm{\lambda(y-x)+(1-\lambda)(z-x)}\leq\lambda\norm{y-x}
+    +(1-\lambda) \norm{z-x}\leq \lambda r+(1-\lambda)r=r$.
+   \item Jeder Durchschnitt konvexer Mengen ist wieder konvex. Insbesondere
+    ist die konvexe Hülle konvex.
+   \item Sei $K$ konvex $\Leftrightarrow\forall n\leq2\,\forall x_{1},\dotsc,
+    x_{n}\in K\,\forall\lambda_{1},\dotsc,\lambda_{n}\geq0\colon
+    (\sum_{i=1}^{n} \lambda_{i}=1\Rightarrow\sum_{i=1}^{n} \lambda_{i}
+    x_{i}\in K$. Man bezeichnet $\sum_{i=1}^{n}\lambda_{i} x_{i}$  als
+    \highl{Konvexkombination} von $x_{1},\dotsc, x_{n}$.$)$
+   \item Die konvexe Hülle $\conv(M)= \Set{\sum_{i=1}^{m} \lambda_{i}x_{i} |
+    m\geq1, \lambda_{i}\geq0, \sum_{i=1}^{m}\lambda_{i}=1, x_{1},\dotsc,
+    x_{n}\in M}$.
+  \end{enumerate}
+\end{bsp}
+
+\begin{defini}
+  Eine Abbildung $\phi\colon X\rightarrow Y$ zwischen linearen Räumen $X$ und
+  $Y$ über $\R$ heißt \highl{affin}, wenn $\forall x_{1}, x_{2}\in
+  X\,\forall\lambda\in\R\colon(\phi((\lambda
+  x_{1}+1-\lambda)x_{2}))=\lambda\phi(x_{1})+(1-\lambda)\phi(x_{2})$.
+\end{defini}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item $\phi$ affin $\Leftrightarrow\forall m\geq2\,\forall x_{1},\dotsc,
+    x_{m}\in M\,\forall\lambda_{1},\dotsc,\lambda_{m}\in\R\colon
+    (\sum_{i=1}^{m} \lambda_{i}=1\Rightarrow \phi(\sum_{i=1}^{m} \lambda_{i}
+    x_{i}= \sum_{i=1}^{m} \lambda_{i}\phi(x_{i})))$
+   \item Affine Bilder und Urbilder konvexer Mengen sind konvex.
+   \item $\phi\colon X\rightarrow Y$ ist genau dann affin, wenn $\exists
+    y_{0}\in Y\,\exists\Phi\colon X\rightarrow Y$, die $\R$"~linear ist,
+    $\forall x\in X\colon(\phi(x)=\Phi(x)+y_{0})$. Die Beweisidee dazu ist,
+    dass $y_{0}= \phi(0)$ und $\Phi(x)= \phi(x)-\phi(0)$ ist.
+   \item Inverse Abbildungen affiner Bijektionen sind wieder affin.
+   \item Sind $\phi_{1}, \phi_{2}\colon X\rightarrow Y$ affin, so auch
+    $\phi_{1}+\phi_{2}\colon X\rightarrow Y$. Sind $\phi_{1}\colon
+    X\rightarrow Y$ und $\phi_{2}\colon Y\rightarrow Z$ affin, so auch
+    $\phi_{2}\circ\phi_{1}\colon X\rightarrow Z$.
+  \end{enumerate}
+\end{bemerk}
+
+\subsection{m"~Teilbarkeit}
+
+\begin{defini}
+  Seien $R\neq\emptyset$ eine Menge, $G$ eine Gruppe von Transformationen auf
+  $R$, $M\subseteq R$ eine Teilmenge von $R$ und $m\geq2$ eine natürliche
+  Zahl. Dann heißt $M$ \highl[teilbar]{$m$"~teilbar} bezüglich $G$ oder $M$ hat eine
+  $m$"~elementige disjunkte \highl[Pflasterung]{$G$"~Pflasterung}, genau dann
+  wenn, $M$ hat disjunkte Zerlegungen $M=M_{1}\cup\dotsb\cup M_{m}$ derart,
+  dass $\forall i\in\{1,\dotsc,m\}\,\exists\gamma_{i}\in G\colon
+  (M_{i}=\gamma_{i}(M_{1}))$.
+\end{defini}
+
+\begin{bsp}
+  \begin{itemize}
+   \item Sei $R=\R$ und $G$ die Gruppe der Translationen, $m\geq2$
+    \begin{enumerate}
+     \item $[0,1)$ translativ $m$"~teilbar: $[0,1)= [0,\nicefrac{1}{m})\cup
+      [\nicefrac{1}{m},\nicefrac{2}{m})\cup\dotsb\cup[\nicefrac{m-1}{m},
+      1)$
+     \item $\R$ ist translativ $m$"~teilbar: $\R=\bigcup_{i=1}^{m} M_{i}$ mit
+      $M_{i}= \bigcup_{k=-\infty}^{\infty} [k+\frac{i-1}{m}, k+\frac{i}{m})$
+    \end{enumerate}
+   \item Die Kreisscheibe der \textsc{euklid}ischen Ebene bezüglich der
+    Isometrien der Ebene nicht $2$"~teilbar.
+    \begin{proof}
+      Wir nehmen an, $B(0,1)=M_{1}\cup M_{2}= M_{1}\cup\gamma(M_{1})$. Sei
+      o.\,B.\,d.\,A. $0\in M_{1}\Rightarrow\gamma(0)\neq0$. Sonst wäre $0\in
+      M_{1}\cap M_{2}$. Weiter ist $M_{2}= M_{2}\cap\gamma(M_{1})=
+      B(0,1)\cap\gamma(B(0,1))= B(0,1)\cap B(\gamma(0),1)$. Also ist
+      $M_{2}\subseteq B(x_{2}, r)$ mit $x_{2}= \frac{\gamma(0)}{2}$ und
+      $r\leq1$. Dann ist $M_{1}= \gamma^{-1}(M_{2})\subseteq
+      B(x_{1},r)\Rightarrow B(0,1) =M_{1}\cup M_{2}\subseteq B(x_{1},r) \cap
+      B(x_{2},r)$. Aber $B(0,1)$ liegt in einem Streifen der Breite $2r<2$.
+      \lightning{}
+    \end{proof}
+  \end{itemize}
+\end{bsp}
+
+
+
 
 \clearpage
 \appendix
@@ -270,8 +369,6 @@
  \bibitem{mathmode} Math mode von Herbert Voss,\\
   \url{http://www.dante.de/CTAN//info/math/voss/mathmode/Mathmode.pdf}
 
- \bibitem{shmathguide} Short Math Guide for \LaTeX{},\\
-  \url{ftp://ftp.ams.org/pub/tex/doc/amsmath/short-math-guide.pdf}
 \end{thebibliography}
 
 \clearpage
